set fabric and pattern lists to set sizes with overflow to prevent behind-modal scrolling, removed edit option from pattern cards/button

--- a/BehindTheSeams/bts-client/src/styles/Fabric.css
+++ b/BehindTheSeams/bts-client/src/styles/Fabric.css
@@ -4,6 +4,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    height: 85vh;
     padding: 1em;
 }
 
@@ -59,6 +60,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    overflow-y: scroll;
     width: 97%;
     margin: 0 auto;
 }
