--- a/BehindTheSeams/bts-client/src/styles/Pattern.css
+++ b/BehindTheSeams/bts-client/src/styles/Pattern.css
@@ -4,6 +4,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    height: 85vh;
     padding: 1em;
 }
 
@@ -22,10 +23,44 @@
     font-size: 42px;
 }
 
+.pattern__search {
+    border: 2px solid var(--dark-color1);
+    border-radius: 7px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.pattern__search i {
+    padding: 0 10px;
+}
+
+.pattern__search input {
+    background-color: var(--light-color2);
+    border: none;
+    border-radius: 0 7px 7px 0;
+    color: var(--dark-color1);
+    font-family: var(--body-font);
+    font-size: 16px;
+    height: 36px;
+    padding: 0 0.5em;
+    outline: none;
+}
+
+.pattern__filter-display {
+    background-color: var(--light-color1);
+    border: 2px dashed var(--dark-color2);
+    border-radius: 5px;
+    color: var(--dark-color2);
+    margin: 10px 0;
+    padding: 15px;
+}
+
 .patterns__pattern-list {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    overflow-y: scroll;
     width: 97%;
     margin: 0 auto;
 }
